# python-testing

./: README.md
d20240131_execute_pipe_output_command/: execute_pipe_output_command.py  pyproject.toml
d20240430_fastapi/: README.md  main.py  pyproject.toml  request.http
d20240510_poetry_extras/: README.md
d20240510_poetry_extras/depended/: pyproject.toml
d20240510_poetry_extras/depending/: pyproject.toml
d20240807_asyncio_run_in_executor/: README.md  pyproject.toml
d20240807_asyncio_run_in_executor/src/d20240807_asyncio_run_in_executor/: __main__.py
nb3.11/: 20240216_pandas_columns.ipynb  20240220_pandas_dict_init.ipynb  20240221_pandas_loop.ipynb  20240222_pandas_concat.ipynb  20240226_pandas_columns.ipynb  20240304_pandas_index.ipynb  20240422_pandas_pydantic_validate.ipynb  20240430_pydantic_validate.ipynb  pyproject.toml
nb3.12/: 20240527_pandera_empty_dataframe.ipynb  20240528_pandera_read_csv.ipynb  20240809_pydantic_json_date.ipynb  20240824_over_month.ipynb  20241004_python_mixin.ipynb  20241010_python_override_exception_catch.ipynb  README.md  pyproject.toml
