[project]
name = "nb3-12"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Atsushi Morimoto (74th)", email = "74th.tech@gmail.com" }]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "pandera>=0.20.3",
    "pandantic>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nb3_12"]
